--- a/OOPblog.html
+++ b/OOPblog.html
@@ -191,22 +191,22 @@
             <p>
               OOP combines groups of related variables and functions into
               objects with properties and methods. This reduces parameters and
-              makes it easier to use and maintain the function. The coding
-              sample below shows an example of functional programming in
-              JavaScript. The variables are declared and passed into the
-              function as parameters.
+              makes it easier to use and maintain functions. The coding sample
+              below shows an example of functional programming in JavaScript.
+              The variables are declared and passed into the function as
+              parameters.
             </p>
             <div class="row">
               <pre class="prettyprint lang-js">
-            // Transportation Costs Including Gas and Regular Maintenance                         
-            let price = 20000;
-            let maintenancePerMonth = 60;
-            let gasPerMonth = 150;
-            let monthsOfOwnership = 120;
+// Transportation Costs Including Gas and Regular Maintenance                         
+let price = 20000;
+let maintenancePerMonth = 60;
+let gasPerMonth = 150;
+let monthsOfOwnership = 120;
 
-            funciton getTransportationCost(price, maintanencePerMonth, gasPerMonth, monthsOfOwnership) {
-                return price + ((maintenancePerMonth + gasPerMonth) * monthsOfOwnership);
-            }
+funciton getTransportationCost(price, maintanencePerMonth, gasPerMonth, monthsOfOwnership) {
+  return price + ((maintenancePerMonth + gasPerMonth) * monthsOfOwnership);
+}
                   </pre
               >
             </div>
@@ -222,60 +222,57 @@
             </p>
             <div class="row">
               <pre class="prettyprint lang-js">
-            // Transportation Costs Including Gas and Regular Maintenance                                                 
-            let myVehichle = {
-                price: 20000,
-                maintenancePerMonth: 60,
-                gasPerMonth: 150,
-                monthsOfOwnership: 120,
+// Transportation Costs Including Gas and Regular Maintenance                                                 
+let vehichle = {
+  price: 20000,
+  maintenancePerMonth: 60,
+  gasPerMonth: 150,
+  monthsOfOwnership: 120,
 
-                getTransportationCost: function() {
-                    return this.price + ((this.maintenancePerMonth + this.gasPerMonth ) * this.monthsOfOwnership);
-                    }
-            };
+  getTransportationCost: function() {
+    return this.price + ((this.maintenancePerMonth + this.gasPerMonth ) * this.monthsOfOwnership);
+  }
+};
                     </pre
               >
 
               <p>
                 This JavaScript object could be made with a Java Class as well.
-                Classes in Java are the blueprint for objects. An example of the
-                myVehichle Class would be as follows:
+                Classes are blueprints for objects. An example of the myVehichle
+                Class would be as follows:
               </p>
               <pre class="prettyprint lang-java">
-                public class Vehichle {
-                    private double price;
-                    private double maintanencePerMonth;
-                    private double gasPerMonth;
-                    private double monthsOfOwnership;
+public class Vehichle {
+  private double price;
+  private double maintanencePerMonth;
+  private double gasPerMonth;
+  private double monthsOfOwnership;
 
-                    public double calculateTransportationCost(double price, double maintanencePerMonth, double gasPerMonth, double monthsOfOwnership) {
-                      return this.price + ((this.maintenancePerMonth + this.gasPerMonth ) * this.monthsOfOwnership);
-                    }
+  public double calculateTransportationCost(double price, double maintanencePerMonth, double gasPerMonth, double monthsOfOwnership) {
+    return this.price + ((this.maintenancePerMonth + this.gasPerMonth ) * this.monthsOfOwnership);
+  }
 
-                    Vehichle (double price, double maintanencePerMonth, double gasPerMonth, double monthsOfOwnership) {
-                      this.price = price;
-                      this.maintanencePerMonth = maintanencePerMonth;
-                      this.gasPerMonth = gasPerMonth;
-                      this.monthsOfOwnership = monthsOfOwnership;
+  Vehichle (double price, double maintanencePerMonth, double gasPerMonth, double monthsOfOwnership) {
+    this.price = price;
+    this.maintanencePerMonth = maintanencePerMonth;
+    this.gasPerMonth = gasPerMonth;
+    this.monthsOfOwnership = monthsOfOwnership;
 
-                      this.transportationCost = calculateTransportationCost(double price, double maintanencePerMonth, double gasPerMonth, double monthsOfOwnership);
-                    }
+    this.transportationCost = calculateTransportationCost(double price, double maintanencePerMonth, double gasPerMonth, double monthsOfOwnership);
+  }
 
-                    double getTransportationCost(){
-                      return this.transportationCost()
-                    }
+  double getTransportationCost(){
+    return this.transportationCost()
+  }
                     
-                }
+}
               </pre>
               <p>
-                Java is a strongly typed language. The class written out above
-                has more lines of code which highlight some of the ways Java OOP
-                encapsulate fields and methods within classes. Notice the
-                keyword private before the fields. A private field or The access
-                modifier private gives someone reading the code another piece of
-                information about the data. This also prevents another class
-                from modifying the value adding a layer of protection to the
-                encapsulated fields and methods.
+                Java is a strongly typed language. Notice the keyword private
+                before the fields. The access modifier "private" gives someone
+                reading the code another piece of information about the data.
+                The private fields are owned by the class and should not (and
+                cannot) be externally modified.
               </p>
             </div>
             <p class="lead">
@@ -283,38 +280,33 @@
             </p>
             <p>
               Abstraction is separating properties and methods from the outside
-              code. Using a private method can eliminate changes to unrelated
-              data. It is also easier to understand an object with a few
-              properties than an object with a lot of properties and methods.
-              Abstraction helps create a simpler user interface and reduces the
-              impact of change. The JavaScript method could be called in an
-              app.js file seperate from the creation of the objects. Combined
-              with a runtime environment such as Node.js. If there were a number
-              of cars different objects could be made and
-              myVehichle.getTransportationCost() could be compared to
-              someOtherVehichle.getTransportationCost(). From an outside
-              perspective the comparison of the two vehichles can be read almost
-              like plain English. Expanding on this in Java, the main method
-              listed below could perform a number of different actions related
-              to comparing cost of ownership separating what the user would like
-              do from the code that is required to perform the actions.
+              code. It is easier to understand an object with a few properties
+              than an object with a lot of properties and methods. Abstraction
+              helps create a simpler user interface and reduces the impact of
+              change. The main method listed below could perform the same
+              comparison as below. Someone reading the main class would
+              immediately know the comparison being made and could look in the
+              Vehichle class to see what each of the fields are.
             </p>
 
             <pre class="prettyprint lang-java">
-              public static void main(String[] args){
-                Vehichle myVehichle = new Vehichle(20000, 60, 150, 120);
-                Vehichle someOtherVehichle = new Vehichle(25000, 50, 80, 120);
+public static void main(String[] args){
+  Vehichle Vehichle = new Vehichle(20000, 60, 150, 120);
+  Vehichle HybridVehichle = new Vehichle(25000, 50, 80, 120);
 
-                System.out.printf("My vehichle cost %f, but if it was a hybrid it would cost %f", 
-                      myVehichle.getTransportationCost(), someOtherVehichle.getTransportationCost());
+  System.out.printf("My vehichle cost %f, but if it was a hybrid it would cost %f", 
+    myVehichle.getTransportationCost(), someOtherVehichle.getTransportationCost());
 
-              }
+}
             </pre>
             <p>
-              someone reading the main class would immediately know the
-              comparison being made and could look in the Vehichle class to see
-              what each of the fields are. This separation between functionality
-              and code makes OOP so powerful.
+              This process could be repeated in JavaScript by creating a
+              hybridVehichle object with the same fields and methods but
+              different values such as lower gas and maintanence expenses and a
+              higher upfront cost. The methods vehichle.getTransportationCost()
+              and hybridVehichle.getTransportationCost() In both coding
+              languages the code comparing the two vehichles reads similar to
+              plain English.
             </p>
             <p class="lead">
               Inheritance
@@ -326,27 +318,26 @@
               which can be made to inherit the data and code features of their
               parent class. This is key to web development with JavaScript
               libraries such as React JS which allows for reusing and modifying
-              components that make up the UI. Functionality common to all the
-              object types can be reused eliminating redundant code.
+              components that make up the UI. Functionality common to the
+              components can be reused eliminating redundant code.
             </p>
 
             <p>
               Inheritance can be applied to the Java example by creating a
-              deliveryVan vehichle as a child class of the vehichle class. This
-              vehichle has maintanence reimbersed by the company so it has been
-              removed from the Transportation costs. The subclass was created
-              with only the declaration and the calculateTransportationCost
-              override because the features that are the same were inherited
-              using the extends keyword.
+              CompanyVehichle subclass of the vehichle superclass. This vehichle
+              has maintanence reimbersed by the company so it has been removed
+              from the Transportation costs. The subclass was created with only
+              the declaration and the calculateTransportationCost override
+              because the features that are the same were inherited using the
+              extends keyword.
             </p>
             <pre class="prettyprint lang-java">
-              public class deliveryVan extends Vehichle {
+public class CompanyVehichle extends Vehichle {
 
-                public double calculateTransportationCost(double price, double gasPerMonth, double monthsOfOwnership) {
-                  return this.price + (this.gasPerMonth * this.monthsOfOwnership);
-
-                }
-              }
+  public double calculateTransportationCost(double price, double gasPerMonth, double monthsOfOwnership) {
+    return this.price + (this.gasPerMonth * this.monthsOfOwnership);
+  }
+}
               </pre
             >
             <p class="lead">
@@ -357,21 +348,21 @@
               conditional statements associated with reusing functions. A
               methodology can be used in each object with differences handled in
               the object rather than a set of conditions within a function.
-              Going back to the vehichle example an array could be made to
-              compare the costs of ownership between the three versions of the
-              vehichle using a polymorphic array.
+              Going back to the vehichle Java example, an array could be made to
+              compare the costs of ownership if the person uses their personal
+              vehichle for work of the vehichle using a polymorphic array.
             </p>
             <pre class="prettyprint lang-java">
-   public static void main(String[] args){
-     Vehichle costComparison[] = new Vehichle[1];
-     costComparison[0] = new HybridVehichle();
-     costComparison[1] = new companyVehichle();
+public static void main(String[] args){
+  Vehichle costComparison[] = new Vehichle[1];
+  costComparison[0] = new Vehichle(20000, 60, 150, 120);
+  costComparison[1] = new companyVehichle(20000, 60, 150, 120);
 
-     for (Vehichle car : costComparison){
-        costComparison.getTransportationCost();
-     }
+  for (Vehichle car : costComparison){
+    costComparison.getTransportationCost();
+  }
 
-   }
+}
               </pre
             >
             <p class="lead">
