first read through revisions

--- a/OOPblog.html
+++ b/OOPblog.html
@@ -262,7 +262,7 @@ public class Vehichle {
   }
 
   double getTransportationCost(){
-    return this.transportationCost()
+    return this.transportationCost;
   }
                     
 }
