full first round of updates

--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
           <div class="profile-content">
             <h1 class="short">Alexander Samalot</h1>
             <h5>
-              I am an<span class="text-primary"> experienced</span> engineer,
-              analyst & web developer
+              I am an<span class="text-primary"> experienced </span>software
+              engineer, analyst & web developer
             </h5>
             <a href="#resume" class="btn btn-primary" target="_blank"
               >Skills Overview</a
@@ -206,15 +206,16 @@
                 <i class="title-icon text-blue flaticon-speech43"></i>
                 <h3>Who am I?</h3>
                 <p class="lead">
-                  Full Stack Developer leveraging published statistical research
-                  to build intuitive database structures. Skills in Javascript,
-                  CSS, HTML, and Python as well as leading projects in a wide
-                  variety of professional and academic environments. Passionate
-                  about developing solutions to complex problems in diverse
-                  teams. Positioned well to understand database management and
-                  analysis end to end. Developed Full Stack ReactJS applications
-                  using a MERN stack and Spring Boot. Certificate in Full Stack
-                  Web Development from University of Connecticut.
+                  Full Stack Developer leveraging professional Java and
+                  JavaScript development, published statistical research and a
+                  proven commitment to learning new technologies. Development
+                  projects in Angular, ReactJS, Spring Boot, as well as graduate
+                  academic development in R, Python and ArcGIS. Passionate about
+                  developing solutions to complex problems in diverse teams.
+                  Positioned well to understand database management and analysis
+                  end to end. Education includes a certificate in Full Stack Web
+                  Development, Bachelors of Science and Masters of Science all
+                  from the University of Connecticut.
                 </p>
                 <a href="#portfolio" class="btn btn-black">See my portfolio</a>
                 <a href="#contact" class="btn btn-default">Contact me</a>
@@ -230,7 +231,7 @@
                   <span class="skill-name">Web Development</span>
                   <p>
                     JavaScript, Java, ReactJS, Node.JS, MongoDB, Express,
-                    Handlebars, HTML, CSS, Google Firebase, GitHub, Spring-Boot,
+                    Handlebars, HTML, CSS, Google Firebase, GitHub, Spring Boot,
                     Docker, Postman, PostgreSQL, Python, and Linux
                   </p>
                 </div>
@@ -251,9 +252,9 @@
                 <div class="speciality">
                   <i class="speciality-icon text-red flaticon-bulb11"></i>
                   <div class="speciality-content">
-                    <h5 class="short">Engineering</h5>
+                    <h5 class="short">Software Engineering</h5>
                     <p class="speciaity-description">
-                      A variety of professional experience
+                      A variety of professional projects
                     </p>
                   </div>
                 </div>
@@ -263,7 +264,7 @@
                   <div class="speciality-content">
                     <h5 class="short">Web Development</h5>
                     <p class="speciaity-description">
-                      Great, modern website designes.
+                      Certification and teaching experience.
                     </p>
                   </div>
                 </div>
@@ -782,11 +783,11 @@
                       ><i class="fa fa-linkedin"></i
                     ></a>
                   </li>
-                  <li>
+                  <!-- <li>
                     <a href="https://www.deviantart.com/"
                       ><i class="fa fa-deviantart"></i
                     ></a>
-                  </li>
+                  </li> -->
                 </ul>
               </div>
               <!-- <div class="col-md-12 col-lg-6">
