--- a/index.html
+++ b/index.html
@@ -347,7 +347,17 @@
                 <div class="timeline">
                   <!-- Single event -->
                   <div class="timeline-event te-blue">
-                    <div class="event-date">March 2020 - Present</div>
+                    <div class="event-date">March 2021 - Present</div>
+                    <div class="event-name">
+                      Environmental Engineer
+                    </div>
+                    <div class="event-description">
+                      GZA GeoEnvironmental, Glastonbury, Connecticut
+                    </div>
+                  </div>
+                  <!-- Single event -->
+                  <div class="timeline-event te-blue">
+                    <div class="event-date">April 2020 - March 2021</div>
                     <div class="event-name">
                       Software Engineer
                     </div>
