--- a/index.html
+++ b/index.html
@@ -232,16 +232,17 @@
                 <div class="skill">
                   <span class="skill-name">Web Development</span>
                   <p>
-                    JavaScript, Java, ReactJS, Angular, TypeScript, Node.JS, MongoDB, Express,
-                    Handlebars, HTML, CSS, Google Firebase, GitHub, Spring Boot,
-                    Docker, Postman, PostgreSQL, Python, and Linux
+                    Python, ReactJS, Node.JS, AWS, Firebase, GitHub, 
+                    GitLab, Docker, Postman, PostgreSQL, Jenkins, MySQL, 
+                    Docker, JIRA, Linux, R, MongoDB, HTML, CSS, 
+                    TypeScript, Java, Spring-Boot, Angular, and Grafana
                   </p>
                 </div>
                 <!-- Sinlge skill -->
-                <div class="skill">
+                <!-- <div class="skill">
                   <span class="skill-name">Engineering and Analysis</span>
                   <p>R, MATLAB, LaTeX, C++ and FORTRAN</p>
-                </div>
+                </div> -->
               </div>
             </div>
 
