--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 <i
                   class="inline-icon icon-before-and-after text-primary fa fa-map-marker"
                 ></i
-                >119 Mohawk Dr. West Hartford, CT 06117
+                >276 Trout Brook Drive, West Hartford, CT 06117
               </li>
               <li>
                 <i
@@ -762,7 +762,7 @@
               <i
                 class="inline-icon icon-before-and-after text-primary fa fa-map-marker"
               ></i
-              >119 Mohawk Dr. <br />West Hartford,<br />Connecticut 06117, USA
+              >276 Trout Brook Drive <br />West Hartford,<br />Connecticut 06117, USA
             </li>
             <li>
               <i
